[project]
name = "jc"
version = "0.1.0"
description = "Python implementation of the Jack compiler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
jc = "jc:compile"
jv = "jv:translate"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
